// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with date selection 1`] = `
<Dialog
  applyButtonText="Apply"
  headerRight={
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={undefined}
      delayLongPress={undefined}
      delayPressIn={50}
      delayPressOut={undefined}
      disabled={undefined}
      hitSlop={undefined}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      pressRetentionOffset={undefined}
      style={undefined}
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="small"
      >
        Clear
      </Text>
    </Touchable>
  }
  onApply={[Function]}
  onCancel={[Function]}
  title="2 Feb -"
  visible={true}
>
  <DateRangePicker
    dateRange={
      Object {
        "endDate": "2018-02-02",
        "startDate": "2018-02-02",
      }
    }
    forceNewRange={false}
    onChange={[Function]}
  />
</Dialog>
`;

exports[`renders correctly with range selection 1`] = `
<Dialog
  applyButtonText="Apply"
  headerRight={
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={undefined}
      delayLongPress={undefined}
      delayPressIn={50}
      delayPressOut={undefined}
      disabled={undefined}
      hitSlop={undefined}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      pressRetentionOffset={undefined}
      style={undefined}
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="small"
      >
        Clear
      </Text>
    </Touchable>
  }
  onApply={[Function]}
  onCancel={[Function]}
  title="2 Feb - 8 Feb"
  visible={true}
>
  <DateRangePicker
    dateRange={
      Object {
        "endDate": "2018-02-08",
        "startDate": "2018-02-02",
      }
    }
    forceNewRange={false}
    onChange={[Function]}
  />
</Dialog>
`;

exports[`renders correctly without date selection 1`] = `
<Dialog
  applyButtonText="Apply"
  headerRight={
    <Touchable
      accessibilityComponentType="button"
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={undefined}
      delayLongPress={undefined}
      delayPressIn={50}
      delayPressOut={undefined}
      disabled={undefined}
      hitSlop={undefined}
      onLongPress={undefined}
      onPress={[Function]}
      onPressIn={undefined}
      onPressOut={undefined}
      pressRetentionOffset={undefined}
      style={undefined}
    >
      <Text
        allowFontScaling={true}
        markdown={false}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgb(45, 47, 127)",
          }
        }
        type="small"
      >
        Clear
      </Text>
    </Touchable>
  }
  onApply={[Function]}
  onCancel={[Function]}
  title="Select dates"
  visible={true}
>
  <DateRangePicker
    dateRange={null}
    forceNewRange={false}
    onChange={[Function]}
  />
</Dialog>
`;
